# Vulkan_engine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE.txt  README.md  vcpkg.json
.cache/clangd/index/: Camera.cpp.5295EF5F939B5573.idx  Camera.h.48F0BEA1C3E46234.idx  DrawGroup.cpp.D0486134755D49A8.idx  DrawGroup.h.19B2E1E3163CA3C5.idx  Drawable.h.D5CDE18CF6D10B72.idx  DrawableMesh.h.7AF7D233AE28B0E5.idx  ECS.h.F8DBB58AED385F74.idx  ECS_Component.cpp.35EDB386DD032F09.idx  ECS_Entity.cpp.A13718F3871FA0C2.idx  ECS_System.cpp.92FF3980F4B8EA1B.idx  Engine.cpp.33A7211628C03D7F.idx  Engine.h.4CCEE2AE10EAF752.idx  InputSystem.cpp.F456725BA3E9D372.idx  (+160 more)
assets/Cursed_Mwerpy_glTF/: Untitled.gltf
docs/markdown_docs/: ECS_DESIGN.md
shaders/: main.frag.glsl  main.glsl  main.vert.glsl  main.vert.glsl~  mesh_rendering.frag.glsl  mesh_rendering.vert.glsl  mesh_rendering_shared.inl  shared.h  shared.inl  skybox_rendering.frag.glsl  skybox_rendering.vert.glsl  skybox_rendering_shared.inl
src/: main.cpp  main.cpp~  thingsToRefactor.txt  window.h
src/Core/: Camera.cpp  Camera.h  Drawable.h  ECS.h  Engine.cpp  Engine.cpp~  Engine.h  InputSystem.cpp  InputSystem.cpp~  InputSystem.h
src/Renderer/: DrawGroup.cpp  DrawGroup.h  DrawGroup.h~  Drawable.h  DrawableMesh.cpp  DrawableMesh.h  DrawableMesh.h~  ManagedMesh.h  MeshManager.h  MeshManager.h~  Renderer.cpp  Renderer.cpp~  Renderer.h  TextureHandle.cpp  TextureHandle.h  TextureHandle.h~
src/Tools/: Model_loader.cpp  Model_loader.cpp~  Model_loader.h  Model_loader.h~  maths_type_casts.h
(+29 files in other folders)
